--- a/main.html
+++ b/main.html
@@ -129,7 +129,13 @@
                 </ul>
 
                 <ul id="products-list"></ul>
+
+                <a href="#" class="products-btn">view all products</a>
             </div>
+        </section>
+
+        <section class="">
+
         </section>
     </main>
     <footer>
